# lathe

./: .gitignore  .mcp.json.example  CHANGELOG.md  FEATURES.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: lathe-code-strict.md  lathe-code.md  lathe-explore.md  lathe-plan.md
bench-fixtures/add-method/: prompt.txt  setup.py  verify.py
bench-fixtures/constants-in-module/: prompt.txt  setup.py  verify.py
bench-fixtures/find-usages/: prompt.txt  setup.py  verify.py
bench-fixtures/hidden-bug-in-body/: prompt.txt  setup.py  verify.py
bench-fixtures/large-file-search/: prompt.txt  setup.py  verify.py
bench-fixtures/multi-file-rename/: prompt.txt  setup.py  verify.py
bench-fixtures/re-read-after-edit/: prompt.txt  setup.py  verify.py
bench-fixtures/rename/: prompt.txt  setup.py  verify.py
bench-fixtures/run-tests-fix-bug/: prompt.txt  setup.py  verify.py
commands/: lathe-help.md  lathe-login.md  lathe-logout.md  lathe-savings.md  lathe-status.md  lathe-update.md  lathe-upgrade.md  lathe.md
scripts/: session-start.sh  statusline.sh  test-install-docker.sh  test-install.dockerfile  test-install.sh
src/beaglelathe/: __init__.py  __main__.py  dedup.py  formatting.py  fuzzy.py  ripgrep.py  savings.py  server.py  usage_client.py  validators.py
src/beaglelathe/ast/: __init__.py  imports.py  language_config.py  parser.py  registry.py  structure.py  stubs.py  symbols.py  truncate.py
src/beaglelathe/ast/handlers/: __init__.py  _base.py  tsx.py
src/beaglelathe/ast/queries/: python.scm  tsx.scm
src/beaglelathe/auth/: __init__.py  cli.py  client.py  credentials.py  install.py
src/beaglelathe/tools/: commit_message.py  edit.py  edit_glob.py  extract_todos.py  git_ops.py  lathe_meta.py  lint_and_typecheck.py  read.py  run_tests.py  search.py  sh.py
