[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaglelathe"
version = "0.2.2"
description = "Token-efficient MCP server: fused search + batched fuzzy edit, structured test/git/lint/todos/commit tools."
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "rapidfuzz>=3.0.0",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-rust>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-ruby>=0.23",
  "tree-sitter-php>=0.23",
  "tree-sitter-c-sharp>=0.23",
  "tree-sitter-c>=0.23",
  "tree-sitter-cpp>=0.23",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
beaglelathe = "beaglelathe.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/beaglelathe"]

[tool.hatch.build.targets.wheel.force-include]
"bin" = "beaglelathe/_bin"

[tool.pytest.ini_options]
testpaths = ["tests"]
